@@ -12,8 +12,8 @@ BurstClustering_bin_CPPFLAGS = \
 
 BurstClustering_bin_LDFLAGS  = @CLUSTERING_LDFLAGS@
 BurstClustering_bin_LDADD = \
-	$(top_srcdir)/src/libTraceClustering/libTraceClustering.la \
-	$(top_srcdir)/src/BasicClasses/libBasicClasses.la \
+	$(top_builddir)/src/libTraceClustering/libTraceClustering.la \
+	$(top_builddir)/src/BasicClasses/libBasicClasses.la \
 	@CLUSTERING_LIBS@
 
 bin_SCRIPTS = BurstClustering.sh
