@@ -16,8 +16,8 @@ DBSCANParametersApproximation_bin_CPPFLAGS=\
 DBSCANParametersApproximation_bin_CFLAGS   = ${CFLAGS}
 DBSCANParametersApproximation_bin_LDFLAGS  = @CLUSTERING_LDFLAGS@
 DBSCANParametersApproximation_bin_LDADD=\
- $(top_srcdir)/src/libTraceClustering/libTraceClustering.la\
- $(top_srcdir)/src/BasicClasses/libBasicClasses.la\
+ $(top_builddir)/src/libTraceClustering/libTraceClustering.la\
+ $(top_builddir)/src/BasicClasses/libBasicClasses.la\
  @CLUSTERING_LIBS@
 
 EXTRA_DIST=DBSCANParametersApproximation
