@@ -1,5 +1,8 @@
 ChangeLog 'ClusteringSuite'
 
+2018-04-16 German Llort <german.llort@bsc.es>
+	* Fixed LD_LIBRARY_PATH to look for libraries under lib and lib64
+
 2017-10-31 German Llort <german.llort@bsc.es>
 	+ Added backwards compatibility to the old pcfparser
 
